mise a jour automatique du statut de la tache principale